--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Test</title>
+    <title>JLL_Aerial_VT_2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.48"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1655298970858"></script>
-    <link rel="preload" href="locale/en.txt?v=1655298970858" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1655298970858" as="script"/>
-	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/r/5/0_0.jpg?v=1655298970858" as="image"/>
-	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/l/5/0_0.jpg?v=1655298970858" as="image"/>
-	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/u/5/0_0.jpg?v=1655298970858" as="image"/>
-	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/d/5/0_0.jpg?v=1655298970858" as="image"/>
-	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/f/5/0_0.jpg?v=1655298970858" as="image"/>
-	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/b/5/0_0.jpg?v=1655298970858" as="image"/>
+    <script src="lib/tdvplayer.js?v=1655300862095"></script>
+    <link rel="preload" href="locale/en.txt?v=1655300862095" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1655300862095" as="script"/>
+	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/r/5/0_0.jpg?v=1655300862095" as="image"/>
+	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/l/5/0_0.jpg?v=1655300862095" as="image"/>
+	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/u/5/0_0.jpg?v=1655300862095" as="image"/>
+	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/d/5/0_0.jpg?v=1655300862095" as="image"/>
+	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/f/5/0_0.jpg?v=1655300862095" as="image"/>
+	<link rel="preload" href="media/panorama_5CFD9B92_5278_C887_41CA_B645DECA817E_0/b/5/0_0.jpg?v=1655300862095" as="image"/>
 	<script src="scorm.js" type="text/javascript"></script>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="script.js?v=1655298970858"></script>
+    <script src="script.js?v=1655300862095"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1655298970858"};
+        var devicesUrl = {"general":"script_general.js?v=1655300862095"};
 
         (function()
         {
@@ -64,9 +64,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1655298970858');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1655298970858');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1655298970858');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1655300862095');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1655300862095');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1655300862095');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
